<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_scene"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/main_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/label_file_name"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/category_name"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/category_label"
        app:layout_constraintTop_toTopOf="@+id/category_label"
        tools:text="@string/radio_button_retrofit" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="category_label, category_name" />

    <TextView
        android:id="@+id/status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/status"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/category_label"
        app:layout_constraintTop_toBottomOf="@id/barrier_category" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/category_name"
        app:layout_constraintTop_toTopOf="@+id/status_label"
        tools:text="Success" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="status,status_label" />

    <Button
        android:id="@+id/button"
        android:layout_width="322dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/detail_button_text"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="616dp" />

</androidx.constraintlayout.motion.widget.MotionLayout>